--- a/1.0/default/com.gl.ledcontrol@1.0-service.hikey960.rc
+++ b/1.0/default/com.gl.ledcontrol@1.0-service.hikey960.rc
@@ -1,7 +1,7 @@
 service ledcontrol /system/vendor/bin/hw/com.gl.ledcontrol@1.0-service.hikey960
     interface com.gl.ledcontrol@1.0::ILedControl default
     class hal
-    user system
-    group system
+    user vendor_ledcontrol
+    group vendor_ledcontrol
     oneshot
     disabled
